--- a/SiMP3/Views/PlaylistEditorPage.xaml
+++ b/SiMP3/Views/PlaylistEditorPage.xaml
@@ -7,7 +7,7 @@
     xmlns:models="clr-namespace:SiMP3.Models"
     BackgroundColor="#0D0D0D">
 
-    <ContentPage.Resources>
+<ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="SurfaceColor">#121212</Color>
             <Color x:Key="CardColor">#161616</Color>
@@ -27,24 +27,15 @@
         </Grid.RowDefinitions>
 
         <!-- Header -->
-        <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" ColumnSpacing="12" VerticalOptions="Center">
-            <ImageButton
-                Source="close.png"
-                WidthRequest="32"
-                HeightRequest="32"
-                BackgroundColor="{StaticResource SurfaceColor}"
-                CornerRadius="16"
-                Padding="6"
-                Clicked="OnCloseClicked" />
+        <Grid Grid.Row="0" ColumnDefinitions="*,Auto" ColumnSpacing="12" VerticalOptions="Center">
             <Label
                 x:Name="PlaylistTitle"
-                Grid.Column="1"
                 Text="Playlist"
                 FontSize="20"
                 FontAttributes="Bold"
                 TextColor="{StaticResource PrimaryTextColor}" />
             <Button
-                Grid.Column="2"
+                Grid.Column="1"
                 Text="Add track"
                 Clicked="OnAddTrackClicked"
                 BackgroundColor="{StaticResource AccentColor}"
